--- a/api/glfs.yaml
+++ b/api/glfs.yaml
@@ -1,14 +1,10 @@
 ---
 openapi: 3.0.0
 info:
-  title: Swagger Petstore
-  description: 'This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters.'
   termsOfService: http://swagger.io/terms/
-  contact:
-    email: apiteam@swagger.io
   license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    name: MIT
+    url: https://opensource.org/licenses/MIT
   version: 1.0.0
 externalDocs:
   description: Find out more about Swagger
@@ -16,26 +12,13 @@ externalDocs:
 servers:
 - url: https://virtserver.swaggerhub.com/vagag/GraphLibraryService/1.0.0
   description: SwaggerHub API Auto Mocking
-tags:
-- name: pet
-  description: Everything about your Pets
-  externalDocs:
-    description: Find out more
-    url: http://swagger.io
-- name: store
-  description: Access to Petstore orders
-- name: user
-  description: Operations about user
-  externalDocs:
-    description: Find out more about our store
-    url: http://swagger.io
 paths:
   /computation:
     post:
       summary: Start new graph computation
       operationId: startComputation
       requestBody:
-        description: A description of the computation that needs to be performed
+        description: Computation that needs to be performed
         content:
           application/json:
             schema:
@@ -51,16 +34,12 @@ paths:
                 example: pong
 components:
   schemas:
-    Computation:
-      required:
-      - algorithm
-      - graph
-      type: object
-      properties:
-        algorithm:
-          type: string
-        graph:
-          $ref: '#/components/schemas/Graph'
+    Algorithm:
+      type: string
+      description: Enumeration of supported algorithms. Should be used everywhere algorithm needs to be specified
+      enum:
+      - Prim
+      - Kruskal
     Graph:
       required:
       - graph
@@ -69,6 +48,31 @@ components:
           type: string
           example: a 1 b 2 c 2
       description: Serilized graph on which the computation should be performed
+    Instance:
+      type: string
+      description: Enumeration of supported instance types. Should be used everywhere instance needs to be specified
+      enum:
+      - nano
+      - micro
+      - standard
+    Computation:
+      required:
+      - algorithm
+      - graph
+      - instance
+      - scaling
+      type: object
+      properties:
+        algorithm:
+          $ref: '#/components/schemas/Algorithm'
+        graph:
+          $ref: '#/components/schemas/Graph'
+        instance:
+          $ref: '#/components/schemas/Instance'
+        scaling:
+          type: number
+          example: 3
+      description: Parameters needed to perform an computation
   requestBodies:
     Computation:
       description: Description of the computation that should be performed
